add GameOver test function (func1 button)